force-app/main/default/objects/Avenir_Commentary__c/Avenir_Commentary__c.object-meta.xml
<CustomObject>
    <label>Avenir Commentary</label>
    <nameField>
        <label>Avenir Commentary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Avenirs Commentary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>