force-app/main/default/objects/Avenir_Commentary__c/fields/Commentary__c.field-meta.xml
<CustomField>
    <fullName>Commentary__c</fullName>
    <label>Commentary</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>