force-app/main/default/objects/Avenir_Commentary__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Avenirs Commentary</relationshipLabel>
    <relationshipName>Avenirs_Commentary</relationshipName>
    <type>Lookup</type>
</CustomField>