force-app/main/default/objects/Avenir_Commentary__c/fields/rating__c.field-meta.xml
<CustomField>
    <fullName>rating__c</fullName>
    <label>rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>